5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1838_1274.log
== TEST (2019-06-24 12:49:05) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = zeros((n,n))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:51:26) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = zeros((n,n))
i = 0
while(i < n):
	m = m[i] + 1
	i = i + 1
print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:52:28) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = zeros((n,n))
i = 0
while(i < n):
	m[i] = m[i] + 1
	i = i + 1
print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:52:41) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = zeros((n,n))
i = 0
while(i < n):
	m[i] = m[i] + 1
	i = i + 1
print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:55:32) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = zeros((n,n))
print(m:5)
	
-- ERROR:
File "XXXX", line 5
    print(m:5)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:06:41) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = ones((n,n))


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:06:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = ones((n,n))
print(m)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:09:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = ones((n,n))
o = zeros(n,dtype=int)
i = o.T
print(m)
print(o)
print(i)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:09:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = ones((n,n))
o = zeros(n,dtype=int)

print(m)
print(o)
print(inv(o))



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:10:35) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = ones((n,n))
o = zeros(n,dtype=int)

print(m)
print(o)
j = inv(o)
print(j)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:11:09) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = ones((n,n))
o = zeros(n,dtype=int)

print(m)
print(o)
j = inv(o)




	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:11:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = ones((n,n))
o = zeros(n,dtype=int)

print(m)
print(o)
print(o).T




	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:12:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = ones((n,n))
o = zeros(n,dtype=int)

print(m)
print(o)
print(o.T)




	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:12:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = ones((n,n))
o = zeros(n,dtype=int)

print(m)
print(o)





	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:13:50) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = ones((n,n))
o = zeros(n,dtype=int)

print(m)
print(o)
x = shape(m)[1]
print(x)





	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:14:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = ones((n,n))
o = zeros(n,dtype=int)

print(m)
print(o)
x = shape(m)[0]
print(x)





	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:14:35) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = ones((n,n))
o = zeros(n,dtype=int)

print(m)
print(o)
x = shape(m)
print(x)





	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:15:57) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = ones((n,n))
o = zeros(n,dtype=int)

print(m)
print(o)
x = m[1,:]
print(x)





	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:16:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = ones((n,n))
o = zeros(n,dtype=int)

print(m)
print(o)
x = m[:,1]
print(x)





	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:16:55) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = ones((1,n))
print(m)







	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:17:06) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = ones((n,5))
print(m)







	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:17:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = ones((n,1))
print(m)







	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:17:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = ones((n,1))
j = ones((1,n))







	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:17:56) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = ones((n,1))
j = ones((1,n))
print(m)
print(j)







	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:20:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = zeros((n,1))
j = zero s((1,n))
print(m)
print(j)
i = 0
while (i < n):
	m[i] = m[i] + 1
	i = i + 1
print(m)







	
-- ERROR:
File "XXXX", line 5
    j = zero s((1,n))
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:21:05) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = zeros((n,1))

i = 0
while (i < n):
	m[i] = m[i] + 1
	i = i + 1
print(m)







	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:21:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = zeros((n,1))

i = 0
while (i < n):
	m[i] = m[i] + 1
	i = i + 1
	j = m
print(j)







	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:36:32) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = zeros((n,n), dtype=int)
for i in range(n):
	for j in range(n):
		m[i,j] = 1
print(m)










	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:37:09) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = zeros((n,n), dtype=int)
for i in range(n):
	for j in range(n):
		m[i,j] = n - 1
print(m)










	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:38:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = zeros((n,n), dtype=int)
for i in range(n):
	m[i] = m[i] - 1
print(m)










	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:38:17) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = zeros((n,n), dtype=int)
for i in range(n):
	m[i] = m[i] + 1
print(m)










	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:38:36) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = zeros((n,n), dtype=int)
for i in range(n):
	m[i]+ = m[1]
print(m)










	
-- ERROR:
File "XXXX", line 6
    m[i]+ = m[1]
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:38:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = zeros((n,n), dtype=int)
for i in range(n):
	m[i]+= m[1]
print(m)










	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:40:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = zeros((n,n), dtype=int)
for i in range(n):
	m[i]+= m[5:1]
print(m)










	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:40:22) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = zeros((n,n), dtype=int)
for i in range(n):
	m[i]+= m[:n]
print(m)










	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:40:33) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = zeros((n,n), dtype=int)
for i in range(n):
	m[i]+= m[1:n]
print(m)










	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:40:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = zeros((n,n), dtype=int)
for i in range(n):
	m[i] = m[1:n]
print(m)










	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:41:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("digite um numero: "))
m = zeros((n,n), dtype=int)
for i in range(n):
	m[i] = m[n:]
print(m)










	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:04:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = int(input("dimensao:"))
mat = ones((n,n), dtype=int)
j = 1
k = 2

for i in range(1,n):
	while(j<n):
		mat[i,j]=i+1
		j = j + 1
	j=k
	k = k + 1

i = 1
k = 2

for j in range(1,n):
	while(i<n):
		mat[i,j] = j+1
		i = i +1
	i = k
	k = k + 1

print(mat)










	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 10:04:43) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = int(input("dimensao:"))
mat = ones((n,n), dtype=int)
j = 1
k = 2

for i in range(1,n):
	while(j<n):
		mat[i,j]=i+1
		j = j + 1
	j=k
	k = k + 1

i = 1
k = 2

for j in range(1,n):
	while(i<n):
		mat[i,j] = j+1
		i = i +1
	i = k
	k = k + 1

print(mat)










	
-- EXECUTION TIME:
1.18624
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
